@@ -1,3 +1,10 @@
+2016-03-04 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCicode.c
+	  Fix long long issues.
+	* support/regression/tests/longlong.c
+	  Add more tests.
+
 2016-02-27 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/scripts/sdcc.nsi
